--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,18 @@
 # Log file
 *.log
 
+# Maven
+**/target
+
+# Log file
+*.log
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
 # Package Files #
 *.jar
 *.war
@@ -16,3 +28,13 @@
 
 # Apache Maven build result
 */target/*
+*.zip
+*.tar.gz
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
+# IntelliJ IDEA
+.idea/
+*.iml
