--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>GasStation</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <profiles>
+    <!--<profiles>
         <profile>
             <id>java8</id>
             <properties>
@@ -16,7 +16,7 @@
                 <maven.compiler.source>8</maven.compiler.source>
             </properties>
         </profile>
-    </profiles>
+    </profiles>-->
 
     <properties>
         <maven.compiler.target>10</maven.compiler.target>
