--- a/pom.xml
+++ b/pom.xml
@@ -8,40 +8,36 @@
     <artifactId>GasStation</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <profiles>
-        <profile>
-            <id>java8</id>
-            <properties>
-                <maven.compiler.target>1.8</maven.compiler.target>
-                <maven.compiler.source>1.8</maven.compiler.source>
-            </properties>
-        </profile>
-    </profiles>
+    <!--    <profiles>-->
+    <!--        <profile>-->
+    <!--            <id>java8</id>-->
+    <!--            <properties>-->
+    <!--                <maven.compiler.target>1.8</maven.compiler.target>-->
+    <!--                <maven.compiler.source>1.8</maven.compiler.source>-->
+    <!--            </properties>-->
+    <!--        </profile>-->
+    <!--    </profiles>-->
 
 
     <build>
         <plugins>
             <plugin>
-<!--                <groupId>com.zenjava</groupId>
+                <groupId>com.zenjava</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
-                <version>8.8.3</version>-->
+                <version>8.8.3</version>
+                <configuration>
+                    <mainClass>MainApp</mainClass>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.7.0</version>
                 <configuration>
-<!--                    <mainClass>MainApp</mainClass>-->
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>
-            </plugin>
-<!--            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
                     <source>10</source>
                     <target>10</target>
                 </configuration>
-            </plugin>-->
+            </plugin>
         </plugins>
     </build>
 
