--- a/pom.xml
+++ b/pom.xml
@@ -8,16 +8,20 @@
     <artifactId>GasStation</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-        <profiles>
-            <profile>
-                <id>java8</id>
-                <properties>
-                    <maven.compiler.target>1.8</maven.compiler.target>
-                    <maven.compiler.source>1.8</maven.compiler.source>
-                </properties>
-            </profile>
-        </profiles>
+    <!--        <profiles>-->
+    <!--            <profile>-->
+    <!--                <id>java8</id>-->
+    <!--                <properties>-->
+    <!--                    <maven.compiler.target>1.8</maven.compiler.target>-->
+    <!--                    <maven.compiler.source>1.8</maven.compiler.source>-->
+    <!--                </properties>-->
+    <!--            </profile>-->
+    <!--        </profiles>-->
 
+    <properties>
+        <maven.compiler.target>10</maven.compiler.target>
+        <maven.compiler.source>10</maven.compiler.source>
+    </properties>
 
     <build>
         <plugins>
@@ -34,8 +38,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.7.0</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>10</source>
+                    <target>10</target>
                 </configuration>
             </plugin>
         </plugins>
