--- a/pom.xml
+++ b/pom.xml
@@ -18,10 +18,10 @@
         </profile>
     </profiles>
 
-       <properties>
+<!--       <properties>
             <maven.compiler.target>10</maven.compiler.target>
             <maven.compiler.source>10</maven.compiler.source>
-        </properties>
+        </properties>-->
 
     <build>
         <plugins>
@@ -38,8 +38,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.7.0</version>
                 <configuration>
-                    <source>10</source>
-                    <target>10</target>
+                    <source><!--10-->1.8</source>
+                    <target><!--10-->1.8</target>
                 </configuration>
             </plugin>
         </plugins>
