--- a/pom.xml
+++ b/pom.xml
@@ -17,11 +17,11 @@
             </properties>
         </profile>
     </profiles>
-
+<!--
        <properties>
             <maven.compiler.target>10</maven.compiler.target>
             <maven.compiler.source>10</maven.compiler.source>
-        </properties>
+        </properties>-->
 
     <build>
         <plugins>
@@ -38,8 +38,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.7.0</version>
                 <configuration>
-                    <source>10<!--1.8--></source>
-                    <target>10<!--1.8--></target>
+                    <source><!--10-->1.8</source>
+                    <target><!--10-->1.8</target>
                 </configuration>
             </plugin>
         </plugins>
